export button alignment issue solved

--- a/data-source-builder-client/src/app/connection/connection.component.css
+++ b/data-source-builder-client/src/app/connection/connection.component.css
@@ -8,3 +8,7 @@
     margin-left: 5px;
     margin-top: 10px;
   }
+
+  .export-btn {
+    margin-right: 3px;
+  }
